--- a/browser/js/album/album.template.html
+++ b/browser/js/album/album.template.html
@@ -1,16 +1,19 @@
 <div ng-controller="AlbumsCtrl">
-  <h3>Albums</h3>
-  <div class="row">
-    <div ng-repeat="album in albums" class="col-xs-4">
-      <a class="thumbnail" ng-click="viewAlbum(album.id)" href="#">
-        <img ng-src="">
-        <div class="caption">
-          <h5>
-            <span></span>
-          </h5>
-          <small> songs</small>
+          <h3>Albums</h3>
+          <div class="row">
+            <div class="col-xs-4" ng-repeat="album in albums">
+              <a class="thumbnail" href="#" ng-click="viewOneAlbum(album)">
+                <img ng-src="{{ album.imageUrl }}">
+                <div class="caption">
+                  <h5>
+                    <span>{{ album.name }}</span>
+                  </h5>
+                  <!-- Perhaps our albums state should have a controller that refers to AlbumFactory so we can do 
+                  {{ AlbumFactory.fetchById(album.id).songs }}
+                  -->
+                  <small> songs</small>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
-      </a>
-    </div>
-  </div>
-</div>
