--- a/browser/js/artist/artist.template.html
+++ b/browser/js/artist/artist.template.html
@@ -1,8 +1,19 @@
-<div class="album" ng-controller="AlbumCtrl">
-  <p>
-    <h3>{{ album.name }}</h3>
-    <img ng-src="{{ album.imageUrl }}" class="img-thumbnail">
-  </p>
+<div ng-controller="ArtistCtrl">
+  <h3>{{ artist.name }}</h3>
+  <h3>Albums</h3>
+  <div class="row">
+    <div class="col-xs-4" ng-repeat="album in artist.albums">
+      <a class="thumbnail" href="#" ng-click="viewOneAlbum(album)">
+        <img ng-src="{{ album.imageUrl }}">
+        <div class="caption">
+          <h5>
+            <span>{{ album.name }}</span>
+          </h5>
+          <small>{{ album.songs.length }} songs</small>
+        </div>
+      </a>
+    </div>
+  </div>
   <table class='table'>
     <thead>
       <tr>
@@ -13,7 +24,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="song in album.songs" ng-class="{active: song === getCurrentSong() }">
+      <tr ng-repeat="song in artist.songs" ng-class="{active: song === getCurrentSong() }">
         <td>
           <button class="btn btn-default btn-xs" ng-click="toggle(song)">
             <span class="glyphicon" ng-class="{ 'glyphicon-pause': isPlaying(song), 'glyphicon-play': !isPlaying(song) }"></span>
