--- a/browser/js/artist/artists.template.html
+++ b/browser/js/artist/artists.template.html
@@ -1,4 +1,4 @@
-<div ng-show="true" ng-controller="ArtistsCtrl">
+<div>
   <h3>Artists</h3>
     <div class="list-group">
       <div class="list-group-item" ng-repeat="artist in artists">
