--- a/browser/index.html
+++ b/browser/index.html
@@ -12,7 +12,6 @@
     <script src="/js/album/album.state.js" defer></script>
     <script src="/js/player/player.controller.js" defer></script>
     <script src="/js/player/player.factory.js" defer></script>
-    <script src="/js/sidebar/sidebar.controller.js" defer></script>
     <script src="/js/artist/artist.controllers.js" defer></script>
     <script src="/js/artist/artist.factory.js" defer></script>
     <script src="/js/artist/artists.state.js" defer></script>
@@ -23,7 +22,7 @@
     <div id="main" class="container-fluid">
 
       <div class="col-xs-2">
-        <sidebar ng-controller="SidebarCtrl">
+        <sidebar>
           <img src="juke.svg" class="logo">
           <section>
             <h4 class="menu-item active">
