--- a/browser/js/album/album.template.html
+++ b/browser/js/album/album.template.html
@@ -1,4 +1,4 @@
-<div class="album" ng-controller="AlbumCtrl">
+<div class="album">
   <p>
     <h3>{{ album.name }}</h3>
     <img ng-src="{{ album.imageUrl }}" class="img-thumbnail">
