--- a/browser/index.html
+++ b/browser/index.html
@@ -17,6 +17,7 @@
     <script src="/js/artist/artists.state.js" defer></script>
     <script src="/js/song/song.factory.js" defer></script>
     <script src="/angular-ui-router/release/angular-ui-router.min.js" defer></script>
+    <base href="/">
   </head>
   <body ng-app="juke">
     <div id="main" class="container-fluid">
